# Portals_for_Orbiter

./: README.md
Config/Vessels/: BLUEPORTAL.cfg  ORANGEPORTAL.cfg
Meshes/: blue_portal.msh  orange_portal.msh
Textures/Portals_for_Orbiter/: blue_portal.dds  orange_portal.dds
sources/: blueportal.cpp  blueportal.h  orangeportal.cpp  orangeportal.h
sources/3D Models/: blue_portal.blend  orange_portal.blend
sources/Linux/: CMakeLists.txt  blueportal.cpp  blueportal.h  orangeportal.cpp  orangeportal.h
